--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -3,3 +3,11 @@
 @tailwind components;
 
 @tailwind utilities;
+
+*{
+    outline: 1px red solid;
+}
+@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800");
+body {
+  font-family: "Mukta", sans-serif;
+}
