--- a/client/src/css/index.css
+++ b/client/src/css/index.css
@@ -4,9 +4,9 @@
 
 @tailwind utilities;
 
-*{
+/* *{
     outline: 1px red solid;
-}
+} */
 @import url("https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800");
 body {
   font-family: "Mukta", sans-serif;
